--- a/src/components/portfolio.astro
+++ b/src/components/portfolio.astro
@@ -166,16 +166,14 @@ const projectItems: projectItemsT = [
                             class="grow basis-0 flex flex-col items-center mt-[3rem] animate-loadFromUp"
                         >
                             <Image
-                                class="min-w-[280px] sxs>:min-w-0 max-w-[40rem]"
-                                widths={[400, 600, 800]}
-                                aspectRatio={item.card.aspectRatio}
-                                formats={['webp']}
+                                class="max-w-[40rem] w-full"
+                                width=""
+                                height="0"
                                 loading="lazy"
                                 decoding="async"
                                 src={item.card.mediaLink}
                                 alt="project image"
                             />
-
                         </div>
 
                         <div
