fix: fixing a typo.

--- a/src/components/about.astro
+++ b/src/components/about.astro
@@ -275,7 +275,7 @@ const classes = {
             <tr class={`${classes.tableBorder} ${classes.selectiveHighlight}`}>
                 <td class={`${classes.tableBorder} ${classes.colPadding}`}>2011</td>
                 <td class={`${classes.tableBorder} ${classes.colPadding}`}
-                    >Missing with electronics.</td
+                    >Messing with electronics.</td
                 >
             </tr>
             <tr class={`${classes.tableBorder} ${classes.selectiveHighlight}`}>
