--- a/src/components/contact.astro
+++ b/src/components/contact.astro
@@ -12,12 +12,12 @@ const classes = {
     class="text-slate-50 pt-[6rem] px-main xs>:px-4"
 >
     <h2
-        class={`text-center capitalize text-2xl pb-[3rem] relative
-                    before:absolute
-                    before:border-b-4 before:border-b-primary
-                    before:w-[3rem] before:h-[48px]`}
+        class={`text-center capitalize text-2xl mb-[3rem]
+               w-full h-[48px]`}
     >
-        Get <span class="text-primary">In Touch</span>
+        <span class="border-b-4 border-b-primary pb-2">
+            Get In Touch
+        </span>
     </h2>
     <form data-netlify="true" name="contact form" class="mx-auto max-w-[400px]" id="form">
         <input
@@ -64,6 +64,6 @@ const classes = {
         </button>
     </form>
 
-    <h3 class="capitalize mx-auto w-max mt-10 text-xl">other channels</h3>
-    <SocialMedia style="mx-auto w-max" />
+    <!-- <h3 class="capitalize mx-auto w-max mt-10 text-xl">other channels</h3> -->
+    <!-- <SocialMedia style="mx-auto w-max" /> -->
 </section>
