--- a/src/components/skills.astro
+++ b/src/components/skills.astro
@@ -5,12 +5,12 @@ const classes = {};
 
 <section aria-label="skills" id="skills" class="text-slate-50 pt-[6rem] px-main xs>:px-4">
     <h2
-        class={`text-center capitalize text-2xl pb-[3rem] relative
-              before:absolute
-              before:border-b-4 before:border-b-primary
-              before:w-[2.1rem] before:h-[48px]`}
+        class={`text-center capitalize text-2xl mb-[3rem]
+               w-full h-[48px]`}
     >
-        My <span class="text-primary">back pack</span>
+        <span class="border-b-4 border-b-primary pb-3">
+            My skills
+        </span>
     </h2>
 
     <style>
