--- a/src/components/portfolio.astro
+++ b/src/components/portfolio.astro
@@ -145,12 +145,12 @@ const projectItems: projectItemsT = [
     class="text-slate-50 pt-[6rem] px-main xs>:px-4 overflow-y-hidden"
 >
     <h2
-        class={`text-center capitalize text-2xl relative
-              before:absolute
-              before:border-b-4 before:border-b-primary
-              before:w-[2.1rem] before:h-[48px]`}
+        class={`text-center capitalize text-2xl
+               w-full h-[48px]`}
     >
-        My <span class="text-primary">portfolio</span>
+        <span class="border-b-4 border-b-primary pb-2">
+            My portfolio
+        </span>
     </h2>
 
     {
@@ -175,19 +175,55 @@ const projectItems: projectItemsT = [
                                 alt="project image"
                             />
                         </div>
+                       
+                        <!--
+                            <h4 class="capitalize text-2lg mt-3 mb-2 text-center">
+                                Obstacles
+                            </h4>
+                            <ul class="ml-3">
+                                {item.details.obstacles.map((obs) => {
+                                    return (
+                                        <li>
+                                            <h5 class="capitalize max-w-[40rem]">
+                                                <span class="text-xl text-primary mr-2">
+                                                    ⚡
+                                                </span>
+                                                {obs[0]}
+                                            </h5>
+                                            <p class="ml-3 max-w-[40rem] text-gray-400 first-letter:uppercase">
+                                                {obs[1]}
+                                            </p>
+                                        </li>
+                                    );
+                                })}
+                            </ul>
+                        -->
 
                         <div
                             aria-label="project details"
                             class="grow basis-0 min-w-[250px] mt-[3rem] animate-loadFromDown"
                         >
-                            <h3 class="capitalize mb-2 text-xl">{item.details.title}</h3>
-                            <p class="first-letter:uppercase text-gray-400 max-w-[40rem]">
+                            <h3 class="capitalize mb-2 text-xl text-center">{item.details.title}</h3>
+                            <p class="first-letter:uppercase text-gray-400 text-center max-w-[40rem] m-auto">
                                 {item.details.idea}
                             </p>
                             {/*check project buttons*/}
+                        </div>
+
+                        <h4 class="capitalize text-xl mt-3 mb-2 text-center">Tools</h4>
+                        <ul class="flex flex-wrap justify-center gap-3 py-2 max-w-[40rem] m-auto">
+                            {item.details.tools.map((tool) => {
+                                return (
+                                    <li class="text-gray-400 border-primary border-[1px] rounded-xl px-3 hover:rotate-[2deg] hover:scale-[1.1] duration-300">
+                                        {tool}
+                                    </li>
+                                );
+                            })}
+                        </ul>
+
                             <div
                                 aria-label="live preview and source code links"
-                                class="w-full flex-wrap flex gap-4 my-5"
+                                class="w-full flex justify-center gap-4 my-5"
                             >
                                 {[
                                     // ['preview', 'ic:round-remove-red-eye', item.card.previewLink],
@@ -240,38 +276,7 @@ const projectItems: projectItemsT = [
                                     );
                                 })}
                             </div>
-                            <h4 class="capitalize text-lg mt-3 mb-2">
-                                Obstacles I Faced
-                            </h4>
-                            <ul class="ml-3">
-                                {item.details.obstacles.map((obs) => {
-                                    return (
-                                        <li>
-                                            <h5 class="capitalize max-w-[40rem]">
-                                                <span class="text-xl text-primary mr-2">
-                                                    ⚡
-                                                </span>
-                                                {obs[0]}
-                                            </h5>
-                                            <p class="ml-3 max-w-[40rem] text-gray-400 first-letter:uppercase">
-                                                {obs[1]}
-                                            </p>
-                                        </li>
-                                    );
-                                })}
-                            </ul>
 
-                            <h4 class="capitalize text-lg mt-3 mb-2">Tools Used</h4>
-                            <ul class="flex flex-wrap gap-3 py-2 max-w-[40rem]">
-                                {item.details.tools.map((tool) => {
-                                    return (
-                                        <li class="text-gray-400 border-primary border-[1px] rounded-xl px-3 hover:rotate-[2deg] hover:scale-[1.1] duration-300">
-                                            {tool}
-                                        </li>
-                                    );
-                                })}
-                            </ul>
-                        </div>
                     </div>
                 </>
             );
