--- a/src/layouts/sharedLayout.astro
+++ b/src/layouts/sharedLayout.astro
@@ -44,18 +44,18 @@ const classes = {
 >
     <div
         aria-label="logo"
-        class="pt-1 hover:rotate-[2deg] hover:scale-[1.1] duration-300 text-primary group font-bold tracking-widest uppercase"
+        class="pt-1 hover:rotate-[2deg] hover:scale-[1.1] duration-300 group font-bold tracking-widest uppercase"
     >
         <a aria-label="intro section" href="#intro">
             <svg
-                class="inline"
+                class="inline text-primary"
                 xmlns="http://www.w3.org/2000/svg"
                 width="16"
                 height="32"
                 viewBox="5 3 14 27"
             >
                 <path
-                    fill="rgb(101 163 13)"
+                    fill="currentColor"
                     d="M18.97 19.757L15.35 5.272A2.996 2.996 0 0 0 12.437 3h-.877a2.996 2.996 0 0 0-2.91 2.272L5.03 19.757a1 1 0 0 0 1.94.486L8.28 15h7.44l1.31 5.243a1 1 0 0 0 1.94-.486ZM8.78 13l1.811-7.242a.998.998 0 0 1 .97-.758h.878a.998.998 0 0 1 .97.758L15.219 13Z"
                 ></path>
             </svg>
@@ -75,7 +75,7 @@ const classes = {
                 );
                 const section = document
                     .getElementById('NavLink#' + document.location.href.split('#')[1]);
-if(section) {section.classList.add('active');}
+                if(section) {section.classList.add('active');}
             });
         </script>
 
@@ -128,15 +128,18 @@ if(section) {section.classList.add('active');}
 <footer class="mt-10 py-4 px-2 leading-7 text-center">
     Copyright © 2023 | made by <span class="text-primary capitalize">Anas Ouardini</span> using
     <!-- <Icon class="w-7 inline" name="vscode-icons:file-type-astro" /> -->
+
+    <span class="text-primary">
     <svg
         viewBox="0 0 32 32"
         class="w-7 inline astro-T7GGGKUI"
         astro-icon="vscode-icons:file-type-astro"
     >
         <path
-            fill="#ff5d01"
+            fill="currentColor"
             fill-rule="evenodd"
             d="M5.9 18.847a7.507 7.507 0 0 0-.572 2.624 3.265 3.265 0 0 0 .551 1.553 7.427 7.427 0 0 0 2.093 1.681l5.128 3.414a7.332 7.332 0 0 0 2.1 1.168 3.239 3.239 0 0 0 1.5 0 7.381 7.381 0 0 0 2.117-1.16L24 24.711a7.512 7.512 0 0 0 2.117-1.688 3.241 3.241 0 0 0 .55-1.563 7.515 7.515 0 0 0-.587-2.643L21.547 4.551a3.973 3.973 0 0 0-.54-1.3 1.733 1.733 0 0 0-.7-.51 3.972 3.972 0 0 0-1.4-.122h-5.902a3.932 3.932 0 0 0-1.4.125 1.713 1.713 0 0 0-.7.512 3.94 3.94 0 0 0-.535 1.3L5.9 18.848zm13.24-13.2a3.329 3.329 0 0 1 .441 1.093l3.892 12.784a16.168 16.168 0 0 0-4.653-1.573l-2.529-8.56a.331.331 0 0 0-.513-.169.323.323 0 0 0-.119.169l-2.5 8.557a16.14 16.14 0 0 0-4.674 1.579l3.908-12.784a3.281 3.281 0 0 1 .442-1.094 1.458 1.458 0 0 1 .582-.43 3.31 3.31 0 0 1 1.175-.1h2.793a3.314 3.314 0 0 1 1.176.1 1.454 1.454 0 0 1 .583.432zM16.127 21.06a5.551 5.551 0 0 0 3.4-.923 2.8 2.8 0 0 1-.207 2.182 3.938 3.938 0 0 1-1.547 1.481c-.674.428-1.254.8-1.254 1.787a2.079 2.079 0 0 0 .209.914 2.49 2.49 0 0 1-1.535-2.3v-.061c0-.683 0-1.524-.962-1.524a1.028 1.028 0 0 0-.391.077 1.021 1.021 0 0 0-.552.551 1.03 1.03 0 0 0-.079.391 3.769 3.769 0 0 1-.988-2.644 4.206 4.206 0 0 1 .175-1.248c.4.757 1.92 1.32 3.731 1.32z"
         ></path>
     </svg>
+    </span>
 </footer>
