enhancement: got rid of a url animation.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,8 @@ export function getStaticPaths() {
 const lang: string = Astro.params.lang;
 ---
 
-<script client:load defer>
+<!-- animated url hash -->
+<!-- <script client:load defer>
     const textToAnimate = 'ASTRO';
     let animatedHash = 'ASTRO';
     const filler = '_';
@@ -66,7 +67,7 @@ const lang: string = Astro.params.lang;
 
     //     console.log({hasAdBlock});
     // }, 1000);
-</script>
+</script> -->
 
 <html lang="en-us">
     <head>
