plan: planning on adding more skills to the portfolio section.

--- a/src/components/skills.astro
+++ b/src/components/skills.astro
@@ -186,13 +186,14 @@ const classes = {};
                     </svg>,
                 ],
 
+                // TODO: sass, docker, sqlite, rest, trpc, playwright, sleneium, wordpress, elementor
+
                 //not sure
                 // ['Rest APIs', 'mdi:github'],
                 // ['neovim', 'simple-icons:neovim'],
                 // ['debian', 'grommet-icons:debian'],
 
                 // not good at
-                // ['Mysql', 'grommet-icons:mysql'],
                 // ['astrojs', 'simple-icons:astro'],
             ].map((skill) => {
                 return (
