--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -77,7 +77,8 @@ const lang: string = Astro.params.lang;
         <meta name="viewport" content="width=device-width" />
         <meta name="generator" content={Astro.generator} />
 
-        <meta property="og:image" content="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS6rayRtrOkPGljGzqmuywe2ccVFo4P7KLWmQ&s" />
+        <!-- <meta property="og:image" content="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS6rayRtrOkPGljGzqmuywe2ccVFo4P7KLWmQ&s" /> -->
+        <meta property="og:image" content="https://www.teka.com/hy-am/wp-content/uploads/sites/130/2019/09/cocinar-carne-al-horno.jpg" />
 
         <link rel="canonical" href={Astro.url} />
 
